--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -975,177 +975,211 @@ GroupFormer 的引入有效地提高了模型处理组内序列的能力, 减轻
 考虑到大型语言模型的输入和输出的多样性, 探索将强化学习策略 (如 **Proximal Policy Optimization (PPO)**[^PPO]) 纳入其中可以提供益处.
 此外, 考虑到对话系统的性能评估指标, 设计目标导向的强化学习策略和反馈函数来增强不同目标也是值得探索的方向.
 
-## Streaming, Duplex, and Interaction
+## 5·流式 & 全双工 & 交互
 
-Streaming, full-duplex technology, and interactions, are crucial elements for enhancing the interactive capabilities of spoken dialogue models because they directly impact the system's responsiveness, the fluidity of natural interaction, and its ability to handle complex interactions.Unlike text language models, spoken dialogue models require real-time processing of user input.
-**Streaming** allows the system to instantly acquire and process speech data; **full-duplex technology** enables both the system and user to speak simultaneously, enhancing the naturalness of interaction; and **handling of interactions** provides the model with the ability to recognize and adapt to various conversational contexts, making the dialogue more intelligent and realistic.
-Building on early explorations, GPT-4o's advanced spoken dialogue capabilities have ignited a surge of research interest.
-With real-time voice processing and natural conversational interaction, these models offer users a seamless and efficient communication experience.
-However, achieving these capabilities requires deep research into model architecture, data collection, system design, and training methods.
-The model needs to be carefully designed and optimized in terms of real-time performance, stability, and response speed.
-At the same time, duplex technology is an indispensable key implementation, which ensures that the voice model has both "ears" and "mouths".
-Next, we will first discuss the streaming processing method in Section 5.1, then introduce the key technologies of duplex communication and explains how to handle interactation to improve user experience in Section 5.2.
+流式, 完全双工技术, 和交互, 是增强口语对话模型的交互能力的关键元素, 因为它们直接影响了系统的响应能力, 自然交互的流畅度, 以及处理复杂交互的能力.
+和文本语言模型不同, 口语对话模型要求实时处理用户输入.
+- **流式**允许系统即时获取和处理语音数据;
+- **完全双工技术**使系统和用户可以同时发言, 增强了交互的自然性;
+- **交互处理**为模型提供了识别和适应各种会话上下文的能力, 使对话更智能和真实.
 
-### Streaming Spoken Dialogue Models
+建立在早期探索的基础之上, GPT-4o 的先进口语对话能力点燃了研究的热潮.
 
-The core of streaming speech models lies in their "real-time" and "continuous" capabilities, meaning they can process input and generate output simultaneously without waiting for complete input.
-This includes two main aspects:
+结合实时声音处理和自然对话交互, 这些模型为用户提供了无缝且高效的沟通体验.
+然而, 实现这些能力需要深入研究模型架构, 数据收集, 系统设计和训练方法.
+这些模型需要仔细设计和优化, 以确保实时性能, 稳定性, 响应速度.
 
-- **Streaming Understanding.** The model can process audio input as the user speaks, without needing to wait for the user to finish entirely, allowing it to align more naturally with the flow of conversation.
+同时, 双工技术是不可或缺的关键实现, 确保声音模型同时具有 "耳朵" 和 "嘴巴".
 
-- **Streaming Generation.** This concept refers to the model's ability to generate output without waiting for all intermediate hidden states.
-Instead, it can produce output progressively as processing occurs, which improves responsiveness and allows for smoother, more efficient interactions.
+下面, 我们将在 5.1 节首先讨论流式处理方法;
+然后, 在 5.2 节介绍双工通信的关键技术, 并解释如何处理交互以提高用户体验.
 
-These streaming capabilities allow the model to perform more fluidly in real-time interactions, providing a seamless communication experience for users.
-We will explore streaming techniques in both end-to-end and cascaded spoken dialogue models, discussing the implementation methods of streaming in each system and highlighting their similarities and differences.
+### 5.1·流式口语对话模型
 
-#### Streaming End-to-End Spoken Dialogue Models
+流式语音模型的核心在于其 "实时" 和 "连续" 的能力, 这意味着它们可以同时处理输入和生成输出, 而不需要等待完整的输入.
 
-End-to-end streaming spoken dialogue models often leverage the knowledge of pre-trained text language models alongside an audio tokenizer, employing an tokenizer-detokenizer architecture to process and output audio signals.
-Based on the concepts of streaming input and output discussed above, end-to-end models also require specific design considerations to enable streaming capabilities.
-These designs center around the model’s input and output handling and can be distilled into three core techniques: causal convolution, causal attention mechanisms, and queue management.
+这包含两个主要方面:
+- **流式理解**: 模型可以处理用户说话的音频输入, 不需要等待用户完全说完, 使其更自然地与对话流对齐.
+- **流式生成**: 这一概念指的是模型的生成输出的能力, 不需要等待所有中间隐藏状态. 它可以随着处理的进行逐步产生输出, 提高响应实现更丝滑更有效的交互.
 
-**Causal Convolution.** Causal Convolution[^128] is a specialized form of convolution widely used in time-series processing, especially suitable for streaming speech models.
-The key feature of causal convolution is that the current output depends only on the current and past inputs, without being influenced by future inputs, thereby strictly respecting temporal order.
-Unlike regular convolution, causal convolution achieves this by "shifting" the convolution kernel to avoid accessing future information.
-In a one-dimensional time series, if the convolution kernel size is \(k\), a standard convolution would use data from \((t - k/2)\) to \((t + k/2)\) at the current time step \(t\).
-Causal convolution, however, pads the input on the left with \(k-1\) zeros so that the kernel only uses data from \(t - k + 1\) to \(t\), aligning the kernel to only consider current and past inputs.
-This padding ensures that each layer's output depends solely on current and prior information, maintaining causality.
-To further expand the model’s receptive field while preserving causality, **dilated causal convolution** can be used.
-This technique introduces gaps within the kernel by inserting zeros between weights, effectively expanding the convolution’s range.
-This allows the model to capture longer dependencies in the data without increasing latency, which is particularly useful for streaming applications.
-In streaming spoken dialogue models, causal convolution plays a critical role in:
+这些流式能力使得模型在实时交互中表现得更流畅, 为用户提供无缝的交流体验.
 
-- **Ensuring real-time processing.** Causal convolution allows the model to compute outputs without accessing future frames, enabling real-time processing by generating outputs as input is received, which is essential for streaming.
+我们将探索端到端和级联口语对话模型中的流式技术, 探讨流式在每种系统中的实现方法, 并强调它们的相似和不同之处.
 
-- **Reducing latency.** By not requiring future input data, causal convolution significantly lowers the latency in speech models, making it more suitable for real-time interaction applications, such as voice assistants and live translation.
+#### 流式端到端口语对话模型
 
-**Causal Attention.** Causal Attention is a specialized form of the attention mechanism designed to ensure that each position in a sequence can only attend to previous positions, thus preserving the temporal order crucial for streaming models.
-This approach ensures that the model’s current output depends only on past and present information, preventing any “leakage” of future information, which is essential for real-time processing tasks.
-In causal attention, the attention mask is typically used to achieve causality.
-By applying a mask that blocks connections to future time steps, the model restricts each token’s receptive field to only the tokens before it.
-Specifically, a lower triangular mask is applied to the attention matrix, setting values to negative infinity for positions corresponding to future tokens.
-This masking technique ensures that the model’s predictions for each time step only consider current and past inputs, thereby adhering to a strict causal structure.
-In streaming speech models, causal attention plays a significant role in enabling real-time interaction.
-Unlike standard attention, which requires access to the entire sequence, causal attention can operate incrementally.
-As new inputs are processed, the model can generate outputs without waiting for future context.
+端到端流式口语对话模型通常利用了预训练文本语言模型的知识和音频分词器, 采用分词器-反分词器架构处理和输出音频信号.
+基于上面讨论的流式输入和输出的概念, 端到端模型还要求具体的设计考虑, 以启用流式能力.
+这些设计以模型的输入和输出处理为中心, 可以总结为三个核心技术:
+- 因果卷积 (Causal Convolution)
+- 因果注意力机制 (Causal Attention Mechanisms)
+- 队列管理 (Queue Management)
 
-**Queue Management**[^129] Audio streams are typically split into frames, then processed in sequence via a queue management system that ensures real-time, orderly processing.
+##### 因果卷积
 
-Some end-to-end models, such as Llama-Omni[^LLaMA-Omni], Mini-Omni[^Mini-Omni] and **Mini-Omni2**[^Mini-Omni2], employ non-streaming ASR model Whisper as an audio encoder components.
-These models have made improvements on the output side to reduce latency.
+**因果卷积 (Causal Convolution)**[^TCN] 是时间序列处理中广泛使用的卷积的一种特殊形式, 特别适用流式语音模型.
+因果卷积的关键特征是当前输出仅依赖于当前和过去输入, 而不受未来输入的影响, 因此严格遵循时间顺序.
+和常规卷积不同, 因果卷积通过 "移动" 卷积核来避免访问未来信息以实现这一点.
 
-- **Mini-Omni.** Mini-Omni use a generation strategy delayed parallel decoding is a that layer-by-layer delays during audio token generation.
-This allows the model to generate text and multiple audio tokens simultaneously at each step, accelerating streaming audio generation and ensuring low-latency real-time output.
+在一维时间序列中, 如果卷积核大小为 $k$, 则标准卷积将在当前时间步 $t$ 使用 $(t - k/2)$ 到 $(t + k/2)$ 之间的数据.
+因果卷积对输入左填充 $k-1$ 个零, 因此卷积核仅使用 $t - k + 1$ 到 $t$ 之间的数据, 使得卷积核仅考虑当前和过去输入.
+这种填充确保每个层的输出仅依赖于当前和先前信息, 保持因果性.
 
-- **Llama-Omni.** Llama-Omni incorporates a non-autoregressive streaming speech decoder that leverages connectionist temporal classification (CTC) to directly generate a sequence of discrete audio tokens as the response.
+为了在保持因果性的同时扩展模型的感受野, 可以使用**膨胀因果卷积 (Dilated Causal Convolution)**.
+这一技术通过在权重之间插入零来在卷积核中引入间隙, 有效扩展了卷积的范围.
+这使得模型在不增加延迟的情况下捕获更长的依赖关系, 特别适用于流式应用.
 
-- **Intrinsicvoice**.[^IntrinsicVoice] Intrinsicvoice introduced GroupFormer module  to group speech tokens, reducing the length of speech sequences to match that of text sequences.
-This approach accelerates inference, alleviates the challenges of long-sequence modeling, and effectively narrows the gap between speech and text modalities.We think they cannot be considered fully streaming because they are not designed to be streaming on the input side.
+在流式口语对话模型中, 因果卷积扮演着至关重要的角色:
+- **确保实时处理**: 因果卷积允许模型在不访问未来帧的情况下计算输出, 实现实时处理, 当输入接收时就能生成输出, 这对于流式至关重要.
+- **降低延迟**: 由于不需要未来输入数据, 因果卷积在语音模型中显著降低延迟, 适用于如语音助手和实时翻译等实时交互应用.
 
-- **Moshi.**[^Moshi] In contrast, Moshi references the architecture of SpeechTokenizer to train a streaming codec from scratch, serving as the audio tokenizer-detokenizer.
-The entire model, including the codec, transformer, and attention mechanism, is built on a causal structure.
+##### 因果注意力机制
 
-- **OmniFlatten.**[^OmniFlatten] OmniFlatten proposes chunk-based processing of text and speech along with gradual learning techniques and data handling to reduce turn-taking delays, such as response delays when users finish speaking or interrupt the system.
-These models have achieved true streaming capabilities and established a foundation for diverse, bidirectional interactions.
+因果注意力是注意力机制的一种特殊形式, 设计用于确保序列中的每个位置智能关注之前的位置, 因此保留时序对于流式模型至关重要.
+这种方法确保了模型当前输出仅依赖于过去和现在信息, 阻止未来信息的任何"泄露", 这对于实时处理任务很重要.
 
-#### Streaming Cascaded Spoken Dialogue Models
+在因果注意力中, 注意力掩码通常用于实现因果性.
+通过应用阻塞到未来时间步的连接的掩码, 模型将每个 Token 的感受野限制为仅前面的 Token.
+具体来说, 会应用下三角掩码到注意力矩阵, 将对应于未来 Token 的位置的值设置为负无穷.
+这种掩码技术确保模型对每个时间步的预测仅考虑当前和过去输入, 因此遵循严格的因果结构.
 
-Consistent with the above, ensuring streaming capability in a model relies on designing both input and output for streaming.
-Due to its cascaded nature, a cascaded model typically relies on external streaming ASR and TTS components, placing the streaming responsibility on these ASR and TTS modules.
+在流式语音模型中, 因果注意力是实现实时交互的关键要素.
+和标准注意力要求访问整个序列不同, 因果注意力可以增量地运行.
+当新输入被处理时, 模型可以生成输出而无需等待未来上下文.
 
-In[^130], comparative studies were conducted on the streaming ASR model **U2++ Conformer**[^131], streaming TTS model **XTTS-v2**[^XTTS], non-streaming ASR **Whisper**, and non-streaming TTS **VITS**[^VITS2].
-The combination of streaming components achieved the lowest latency and significantly contributed to interactive interruption capabilities.
+##### 队列管理[^AudioDec]
 
-### Duplex Technology and Interaction
+音频流通常被分割成帧, 然后以序列形式通过队列管理系统确保实时有序的处理.
 
-#### Duplex Technology
+一些端到端模型, 例如 LLaMA-Omni[^LLaMA-Omni], Mini-Omni[^Mini-Omni] and **Mini-Omni2**[^Mini-Omni2], 采用非流式 ASR 模型 Whisper 作为音频编码器组件.
+这些模型在输出段上进行了改进, 以减少延迟.
+- **Mini-Omni**: Mini-Omni 使用延迟并行解码策略, 在音频 Token 生成时逐层延迟.
+这种策略允许模型同时生成文本和多个音频 Token, 加快流式音频生成速度, 并确保低延迟实时输出.
+- **LLaMA-Omni**: LLaMA-Omni 融合了非自回归流式语音解码器, 利用**连接时序分类 (CTC)** 直接生成音频 Token 序列作为响应.
+- **Intrinsicvoice**.[^IntrinsicVoice]: IntrinsicVoice 引入 GroupFormer 模块, 将语音 Token 进行分组, 减少语音序列的长度与文本序列的长度匹配.
+这种方法加快推理速度, 缓解长序列建模的挑战, 有效缩小语音和文本模态之间的差距.
 
-The term Duplex originates from the field of communications, used to describe interaction modes between two parties in data transmission.
-Depending on the type of communication, duplex is divided into half-duplex and full-duplex.
+我们认为它们不能被认为是完全流式的, 因为它们没有在输入端设计为流式.
 
-With the development of audio processing and generation technology , the concept of duplex has been introduced to speech systems, especially within the context of speech language models.
-Here, duplex doesn’t just refer to signal transmission but emphasizes the synchronization and natural interaction in human-computer dialogue.
-Specifically, within model architecture, it means that the model must retain its ability to perceive external input even while generating a response---essentially, the ability to listen while speaking.
+- **Moshi.**[^Moshi]: 相比之下, Moshi 参考 SpeechTokenizer 的架构, 重新训练一个流式编解码器, 作为音频 Tokenizer-DeTokenizer.
+  整个模型, 包括编解码器, Transformer, 和注意力机制, 都建立在因果结构之上.
+- **OmniFlatten.**[^OmniFlatten]: OmniFlatten 提出基于块的文本和语音处理, 并采用渐进学习技术和数据处理, 以减少轮次交换延迟, 例如用户完成说话或中断系统时的响应延迟.
 
-**Simplex.** In simplex communication, data flows in only one direction.
-The speaker can send data, while the listener can only receive it.
-As shown in Figure \ref{fig:simplex}, the robot continuously transmits audio, while the user has no ability to respond.
-This fixed-direction, one-way communication has the limitation of lacking interactivity.
+这些模型实现了真正的流式能力, 并为多样化的双向交互奠定了基础.
 
-**Half-Duplex.** In half-duplex communication, data flows in both directions but not simultaneously.
-The two parties must take turns speaking and listening.
-As illustrated in Figure \ref{fig:half-duplex}, the user speaks first, followed by a response delay during which the robot "thinks" before replying.
-The robot’s response occurs only after the user has finished speaking, and vice versa.
-This turn-taking method is similar to using a walkie-talkie, where each party can only transmit after the other has finished, limiting efficiency.Half-duplex is a common mode in early voice interaction systems.
-In a typical half-duplex interaction, there are noticeable pauses in the conversation; the user and the system cannot “speak”  simultaneously, making the conversation feel less smooth, much like communication through a walkie-talkie.
-For example, voice assistants like Siri use wake words or button presses to trigger the dialogue and require the speaker to finish a complete sentence before responding.
-These systems typically adopt an ASR-LM-TTS cascaded structure and are often constrained by cascade delays and the turn-based nature of text language models.
-Although this interaction method is simple and easy to implement, it can feel rigid and disjointed in natural conversational settings, with notable latency.
-It is designed more for command execution rather than interactive communication.
+#### 流式级联口语对话模型
 
-**Full-Duplex.** Full-duplex communication allows both parties to send and receive data simultaneously[^132].
-Figure \ref{fig:full-duplex} shows the user and robot engaging in overlapping, real-time interaction, where backchannels and interruptions are possible.
-This mode enables a natural, two-way conversation, where both the user and robot can speak, respond, and even interrupt each other as needed, much like a phone call.In dialogue systems, full-duplex means that the system and user can speak simultaneously and interrupt each other, making it closer to natural conversation in real life.
-Full-duplex large voice models allow the system not only to listen and understand the user while they speak but also to interrupt at appropriate moments or respond with backchannel cues.
-Moreover, the system can detect the user’s intent to interrupt and pause itself accordingly, maintaining a smooth flow in the interaction.
+和前文一致, 确保模型中的流式能力依赖于设计流式输入和输出.
+由于模型的级联性质, 级联模型通常依赖于外部的流式 ASR 和 TTS 组件, 将流式责任放在这些 ASR 和 TTS 模块上.
 
+文献 [^Wang2024Full] 对流式 ASR 模型 **U2++ Conformer**[^U2++], 流式 TTS 模型 **XTTS-v2**[^XTTS], 非流式 ASR 模型 Whisper, 非流式 TTS 模型 **VITS**[^VITS2]) 进行了比较研究.
 
-The ultimate goal of a spoken dialogue moded is to make the user feel as though they are conversing with a real human friend.
-Clearly, full-duplex technology is essential for achieving natural voice dialogue systems, enabling the system to send and receive audio signals simultaneously, thus facilitating real-time interaction.
-Unlike text-based models, it doesn’t “cover its ears” while speaking.
-Users and intelligent agents can interrupt each other while listening or express their attitude through non-verbal signals, such as interjections or laughter.
-The challenges in realizing this lie in ensuring conversational fluidity, seamless turn-taking, and precise timing of interactions.
-Developing a full-duplex system that can both generate and receive voice signals in complex interactive scenarios remains a key focus in academic and industrial research.
+流式组件的组合实现了最低延迟, 并为交互中断能力提供了显著贡献.
 
-#### Interaction
+### 5.2·双工技术和交互
 
-Now that we understand duplex technology, we can further explore duplex spoken dialogue model.
+#### 双工技术
 
-We start with some concept.Turn-taking is the core concept in duplex dialogue.
-It refers to the process in which speakers take turns speaking in an orderly manner during a conversation, forming a pattern of turn-taking.
-Over the past few decades and has been extensively studied across fields such as linguistics, phonetics, and sociology.
-Some research [^133], [^134]uses a non-deterministic finite-state machine with six states to describe the turn-taking behavior between the system and the user in a spoken dialogue system (SDS).
-It outlines all possible states of turn-taking within an SDS, defining the objective of turn-taking as minimizing mutual silence or overlap between interlocutors, thereby improving communication efficiency.
-Turn-taking encompasses three fundamental concepts:
+双工 (Duplex) 一词源自通信领域, 用于描述数据传输双方之间的交互模式.
+根据通信类型, 双工可以分为半双工和全双工.
 
-- **Turn-taking cues**[^135], [^136].
-These include voice, rhythm, breathing, gaze, or gestures.
-Agents can use these cues to determine whether to take a turn from the user or to relinquish the turn.
+随着音频处理和生成技术的发展, 双工的概念被引入语音系统, 特别是在语音语言模型的语境中.
+此时双工不只是指代信号传输, 还强调了人机对话中的同步和自然互动.
+具体来说, 在模型架构中, 它意味着模型必须保持其接收外部输入的能力甚至是在生成响应时, 也就是在说话的时候保持监听的能力.
 
-- **Turn-end detection or prediction.** The distinction between detection[^137], [^138] and prediction[^139], [^140] lies in that detection determines whether the agent should take a turn at the current moment, whereas prediction decides when the turn-taking should occur in the future.
+![](Images/S20241115_Fig.08.png)
 
-- **Overlap.** This mainly involves two situations.
-When the user and agent’s voices overlap, if the user intends to take the turn from the agent, this behavior is defined as an \textit{interruption}[^141], [^Spectron].
-If the user has no intention of taking the turn, this behavior is considered \textit{backchannel}[^142] or a listener response, such as "uh-huh," "right."
+##### 单工 (Simplex)
 
-Through these concepts, we can better understand turn-taking behavior in duplex dialogues.
-In summary, our interactions with voice dialogue systems can be categorized as \textit{interruptions}, \textit{backchannels}, and \textit{normal turn exchanges}.
+在单工通信中, 数据仅在一个方向流动.
+说话人可以发送数据, 但听众只能接收它.
 
-The earliest full-duplex systems used a simple Voice Activity Detection (VAD) component to model whether the user intended to interrupt.
-However, this approach is inadequate for handling backchannel interaction forms, leading to frequent interruptions and introducing considerable delays.
+如图 08(a) 所示, 机器人连续地传输音频, 而用户却无能力作出反应.
+这种固定方向, 单向的通信有着缺乏互动性的局限性.
 
-We can briefly categorize the exploration of interactions into cascaded systems and end-to-end systems based on duplex technology.
-Regardless of the system type, the critical core idea is that the system must continuously track external information in real-time, analyze it, and determine the model’s operational state accordingly.
-An interactive voice system must meet two requirements: 1) The ability to accept external information in real-time at any moment.
-2) The ability to respond to this information accurately.
-This includes:
+##### 半双工 (Half-Duplex)
 
-- **Detecting User Interactions.** When the user tries to interject or provide new information, the system can recognize this intent and immediately stop its output to allow the user to speak.
+在半双工通信中, 数据在两个方向流动但不能同时进行. 双方必须轮流说话和听.
 
-- **Backchanneling During User Speech.** While the user is speaking, the system can provide brief acknowledgments like "uh-huh" or "I see" to indicate active listening, which encourages the user to continue.
+如图 08(b) 所示, 用户首先说话, 随后机器人会在响应延迟期间 "思考" 再回复.
+机器人的回复仅在用户完成说话后发生, 反之亦然.
 
-- **Quickly Responding After User Completion.** When the user finishes speaking, the system can promptly recognize this cue and respond without unnecessary delays, maintaining a smooth conversational flow.
+这种轮流的方法类似于使用步话机 (一种小型便携式无线电通信设备), 每一方只能在对方完成后才能发声, 效率受限.
 
-- **Handling Pauses in User Speech.** When the user briefly pauses, the system can interpret this as a moment of thought rather than an invitation to respond, thus avoiding premature interruptions and preserving the natural flow.
+半双工是早期声音交互系统的常用模式.
+在典型的半双工交互中, 对话中会出现明显的停顿; 用户和系统不能同时发声, 使得对话感觉不够流畅, 就像通过步话机进行通信一样.
+例如, 语音助手 Siri 采用唤醒词或按键触发对话, 要求说话者在完成完整句子后才回复.
+这些系统通常采用 ASR-LM-TTS 级联结构, 并受到级联延迟和基于文本语言模型的轮流性质的限制.
 
-- **Interrupting the User When Necessary.** In situations where the system detects critical information, it can choose to interrupt the user to provide immediate feedback.
-For example, if the user is speaking but the system needs to alert them to an error, it can intervene in real-time to ensure effective communication.
+尽管这种交互方法简单且易于实现, 但在自然对话设置下, 它可能感觉僵硬和分离, 带来明显的延迟.
+它主要为命令执行而设计, 而不是交互通信.
 
-**Cascaded Systems.**
-To enable interactive functionality, cascaded spoken dialogue models typically require explicit modeling of dialogue turns.
-As the core, the large language model needs effective context and turn management.
-Next, we introduce several representative works on interaction in cascaded systems.
+##### 全双工 (Full-Duplex)
+
+全双工通信允许双方同时发送和接收数据 (LSLM[^LSLM]).
+图 08(c) 展示了用户和机器人在重叠, 实时互动中进行交流, 反向通道和中断都是可以的.
+这种模式使得双方可以进行自然的双向对话, 即用户和机器人可以同时说话, 回应, 甚至可以互相打断, 就像打电话一样.
+
+在对话系统中, 全双工意味着系统和用户可以同时说话, 并可以互相打断, 这使得它更接近于现实生活中的自然对话.
+全双工的大型声音模型允许系统不仅能在说话时听取并理解用户, 还能在适当的时候打断, 并以反向通道的形式回应.
+此外, 系统还可以检测到用户的打断意图, 并相应地暂停自己, 保持对话的流畅.
+
+---
+
+口语对话模型的最终目标是让用户感觉自己正在和真正的人类朋友进行对话.
+很明显, 全双工技术是实现自然语音对话系统的必要条件, 它使得系统能够同时发送和接收音频信号, 这有助于实现实时互动.
+与基于文本的模型不同, 在说话时它并不会 "掩耳盗铃".
+用户和智能体可以在听取或通过非语言信号 (如感叹或笑声) 表达它们的态度时打断对方.
+
+实现这一目标的挑战在于确保对话流畅, 无缝轮流, 以及对话的精准时机.
+开发能够在复杂的交互场景中生成和接收语音信号的全双工系统, 仍然是学术和工业研究的关键关注点.
+
+#### 交互
+
+现在我们理解了双工技术, 可以进一步探索双工模式口语对话模型.
+
+我们从一些概念开始.
+
+**轮次交换/轮流 (Turn-Taking)** 是双工对话中的核心概念. 它指的是说话人在对话中按照有序的方式轮流说话的过程, 形成轮次交换的模式.
+在过去几十年中, 轮次交换已经在语言学, 语音学, 社会学等领域广泛研究.
+- 一些研究 ([^Raux2009Finite]; [^Sacks1974Simplest]) 使用具有六个状态的非确定性有限状态机来描述口语对话系统 (SDS) 中用户和系统之间的轮次交换行为.
+它概述了 SDS 中所有可能的轮次交换状态, 定义了轮次交换的目标, 即在交流双方之间最小化相互静默或重叠, 从而提高交流效率.
+
+轮次交换包含三个基本概念:
+- **轮次交换提示 (Turn-Taking Cues)** ([^Duncan1972Some], [^Duncan1974Signalling])
+  这些包括声音, 节奏, 呼吸, 视线或手势. 智能体可以使用这些提示来判断是否应该从用户那里获得轮次.
+- **轮次结束检测或预测 (Turn-End Detection or Prediction)**.
+  - **检测** ([^Hara2019Turn], [^Lala2017Attentive]) 决定智能体是否应在当前时刻获得轮次,
+  - **预测** ([^TurnGPT]; [^Lala2019Smooth]) 决定轮次交换何时发生.
+- **重叠**. 主要涉及两种情况. 当用户和智能体的声音重叠时,
+  - **中断 (Interruption)**: 用户打算从智能体获得轮次 ([^Khouzaimi2016Reinforcement]; [^Marge2022Spoken]).
+  - **反向通道 (Backchannel)/听众反应 (Listener Response)**: 用户没有打算获得轮次, 如 "uh-huh" 或 "right" [^Hara2018Prediction].
+
+通过这些概念, 我们可以更好地理解双工对话中的轮次交换行为.
+总而言之, 与基于文本的对话系统相比, 我们的与语音对话系统的互动可以分为中断, 反向通道和正常轮次交换.
+
+最早的全双工系统使用简单的语音活动检测 (Voice Activity Detection, VAD) 组件来建模用户是否有意进行打断.
+然而, 这种方法在处理反向通道交互形式时显得不足, 容易导致频繁的打断和较大的响应延迟.
+
+我们可以根据双工技术, 将现有系统对交互的探索大致分为级联式系统和端到端系统.
+和系统类型无关, 核心思想是: 系统必须实时持续地跟踪外部信息, 分析, 并据此确定模型的操作状态.
+
+一个交互式语音系统必须满足两个要求:
+1. 在任意时刻实时接收外部信息;
+2. 能够准确响应外部信息.
+
+这包括以下几点:
+- **检测用户交互.** 当用户试图插入说话或提供新信息, 系统可以识别该意图并立即停止其输出, 让用户说话.
+- **在用户说话时反馈.** 当用户正在说话时, 系统可以提供简短的确认, 如 "uh-huh" 或 "I see", 鼓励用户继续说话.
+- **在用户完成说话后快速响应.** 当用户完成说话, 系统可以立即识别这个信号, 并立即响应, 保持对话的流畅.
+- **处理用户说话中的停顿.** 当用户简短地暂停, 系统可以将其解释为思考的时刻, 而不是响应的时刻, 避免过早的打断, 保持自然的对话流畅.
+- **在必要时中断用户.** 在系统检测到关键信息时, 它可以选择中断用户, 提供即时反馈. 例如, 如果用户正在说话, 但系统需要提醒他们出现错误, 它可以立即介入, 确保有效的沟通.
+
+##### 级联系统
+
+为了实现交互功能, 级联口语对话模型通常要求显式建模对话轮次.
+作为核心, 大语音模型需要有效的内容和轮次管理.
+接下来, 我们介绍级联系统中的几个代表性工作.
 
 - **Duplex Conversation.** In [^143], three core modules are proposed to achieve smooth full-duplex dialogue: user state detection, response signal selection, and interruption detection.
 The user state detection module not only focuses on traditional turn-end detection but also identifies whether the user intends to switch turns, continue speaking, or hesitates during their speech.
@@ -1776,7 +1810,7 @@ SemantiCodec [^238]             & \url{https://github.com/haoheliu/SemantiCodec-
 HiFi-Codec [^239]              & \url{https://github.com/yangdongchao/AcademiCodec}        \\
 FunCodec  [^240]               & \url{https://github.com/modelscope/FunCodec }              \\
 APCodec  [^241]                & \url{https://github.com/YangAi520/APCodec/tree/main}       \\
-AudioDec [^129]                 & \url{https://github.com/facebookresearch/AudioDec}         \\
+AudioDec [^AudioDec]                 & \url{https://github.com/facebookresearch/AudioDec}         \\
 FACodec  [^242]                & \url{https://github.com/lifeiteng/naturalspeech3\_facodec} \\
 Language-Codec  [^243]         & \url{https://github.com/jishengpeng/Languagecodec}         \\
 XCodec  [^244]           & \url{https://github.com/zhenye234/xcodec}  \\
@@ -1868,7 +1902,7 @@ SimVQ [^259] &
 [^InstructTTS]: yang2024instructtts
 [^ControlSpeech]: ji2024controlspeech
 [^FisherCorpus]: cieri2LLaMA3fisher
-[^Spectron]: marge2022spoken
+[^Marge2022Spoken]:  Spoken Language Interaction with Robots: Recommendations for Future Research.
 [^PSLM]: mitsui2024pslm
 [^SpiRit-LM]: nguyen2024spirit
 [^Freeze-Omni]: wang2024freezeomnismartlowlatency
@@ -1940,21 +1974,21 @@ SimVQ [^259] &
 [^Diffusion-DPO]: wallace2024diffusion
 [^MusicRL]: cideron2024musicrl
 [^S20231109]: A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions.
-[^128]: bai2018empirical
-[^129]: wu2023audiodec
-[^130]: wang2024full
-[^131]: wu2021u2++
-[^132]: ma2024language
-[^133]: raux2009finite
-[^134]: sacks1974simplest
-[^135]: duncan1972some
-[^136]: duncan1974signalling
-[^137]: hara2019turn
-[^138]: lala2017attentive
-[^139]: lala2019smooth
-[^140]: ekstedt2020turngpt
-[^141]: khouzaimi2016reinforcement
-[^142]: hara2018prediction
+[^TCN]: bai2018empirical
+[^AudioDec]: wu2023audiodec
+[^Wang2024Full]: A Full Duplex Speech Dialogue Scheme Based on Large Language Models.
+[^U2++]: wu2021u2++
+[^LSLM]: ma2024language
+[^Raux2009Finite]: A Finite-State Turn-Taking Model for Spoken Dialog Systems.
+[^Sacks1974Simplest]: A Simplest Systematics for the Organization of Turn-Taking for Conversation.
+[^Duncan1972Some]: duncan1972some
+[^Duncan1974Signalling]: duncan1974signalling
+[^Hara2019Turn]: hara2019turn
+[^Lala2017Attentive]: lala2017attentive
+[^Lala2019Smooth]: lala2019smooth
+[^TurnGPT]: ekstedt2020turngpt
+[^Khouzaimi2016Reinforcement]: khouzaimi2016reinforcement
+[^Hara2018Prediction]: hara2018prediction
 [^143]: lin2022duplex
 [^144]: jin2021duplex
 [^145]: CleanS2S
